# src/routes/category.routes.ts
@@ -6,24 +6,13 @@ import {
   removeCategory,
   updateExistingCategory,
 } from "../controllers/category.controller";
-import { authMiddleware } from "../middlewares/auth.middleware";
 import { validateBody } from "../middlewares/validate.middleware";
 
 const router = Router();
 
 router.get("/", getAllCategories);
-router.post(
-  "/",
-  authMiddleware,
-  validateBody(categorySchema),
-  createNewCategory,
-);
-router.put(
-  "/:id",
-  authMiddleware,
-  validateBody(categorySchema),
-  updateExistingCategory,
-);
-router.delete("/:id", authMiddleware, removeCategory);
+router.post("/", validateBody(categorySchema), createNewCategory);
+router.put("/:id", validateBody(categorySchema), updateExistingCategory);
+router.delete("/:id", removeCategory);
 
 export default router;
