# src/routes/product.routes.ts
@@ -6,19 +6,13 @@ import {
   removeProduct,
   updateExistingProduct,
 } from "../controllers/product.controller";
-import { authMiddleware } from "../middlewares/auth.middleware";
 import { validateBody } from "../middlewares/validate.middleware";
 
 const router = Router();
 
 router.get("/", getAllProducts);
-router.post("/", authMiddleware, validateBody(productSchema), createNewProduct);
-router.put(
-  "/:id",
-  authMiddleware,
-  validateBody(productSchema),
-  updateExistingProduct,
-);
-router.delete("/:id", authMiddleware, removeProduct);
+router.post("/", validateBody(productSchema), createNewProduct);
+router.put("/:id", validateBody(productSchema), updateExistingProduct);
+router.delete("/:id", removeProduct);
 
 export default router;
